Note: knowledge management suggestions

--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -3,3 +3,7 @@
   - 将事做到不会出错
   - 将事做到可以非常方便地交接给他人
 - 职场的潜规则是，规则没有改之前，你违背了就是错
+- 知识管理的 3 个关键点：
+  1. 采用方便更新和查阅文档的工具
+  2. 基于知识管理者的场景，确保知识的体系化，让人找具体的知识点时更快
+  3. 日常工作中养成创建、使用和持续优化文档的好习惯
