Add note for technical value

--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -7,3 +7,10 @@
   1. 采用方便更新和查阅文档的工具
   2. 基于知识管理者的场景，确保知识的体系化，让人找具体的知识点时更快
   3. 日常工作中养成创建、使用和持续优化文档的好习惯
+- 知识架构的 5 大要素：
+  1. 系统性
+  2. 结构化
+  3. 层次感
+  4. 逻辑性
+  5. 清晰度
+- 工作成果可以是技术价值，也可以是业务价值，晋升默认考察的是业务价值，关注业务成果这一职场“潜规则”其实是商业社会的运作常识
