Add 8 method for improve programming ability

--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -14,3 +14,12 @@
   4. 逻辑性
   5. 清晰度
 - 工作成果可以是技术价值，也可以是业务价值，晋升默认考察的是业务价值，关注业务成果这一职场“潜规则”其实是商业社会的运作常识
+- 提高编程水平的 8 个方法：
+  1. 在完成日常工作任务之余，通过阅读整个软件项目的源代码来学习
+  2. 别总在学的路上，编程水平是在挑战自己觉得驾驭不了的复杂任务中提高的
+  3. 别放过自己，通过持续优化自己写的代码，去看见和夯实自己的进步
+  4. 学习别只停留于应用软件层面，对底层技术理解得越深，越能驾驭抽象度高的技术
+  5. 拥抱和借力开源软件，帮助自己打开编程视野的同时，还省去了从无到有的开发，省时又省力
+  6. 参与大规模软件的开发工作，才能更好地理解软件行业的复杂度，也越能锻炼自己的编程水平
+  7. 通过工具、协作和软件设计来应对大规模软件的复杂度
+  8. 向工作方法论和软件开发平台要工作质效
