[GeekTime] Add the properties of good program

--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -23,6 +23,10 @@
   6. 参与大规模软件的开发工作，才能更好地理解软件行业的复杂度，也越能锻炼自己的编程水平
   7. 通过工具、协作和软件设计来应对大规模软件的复杂度
   8. 向工作方法论和软件开发平台要工作质效
-- 所有软件开发活动包括 **根本任务** 和 **次要任务**。根本任务是打造构成抽象软件实体的复杂概念结构，次要任务是使用编程语言表达这些抽象实体，并在空间和时间限制内将它们映射成机器语言
+- 所有软件开发活动包括 **根本任务** 和 **次要任务**
+  - 根本任务是打造构成抽象软件实体的复杂概念结构
+  - 次要任务是使用编程语言表达这些抽象实体，并在空间和时间限制内将它们映射成机器语言
 - 什么是好程序：
   1. 让人易于理解的程序（在同一个抽象层次下的比较）
+  2. 好程序有着清晰、颗粒度合适、连贯且一致的概念
+  3. 好程序是让人容易修改的
