[GeekTime] Add the software design note

--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -30,3 +30,6 @@
   1. 让人易于理解的程序（在同一个抽象层次下的比较）
   2. 好程序有着清晰、颗粒度合适、连贯且一致的概念
   3. 好程序是让人容易修改的
+- 软件设计的两个洞察：
+  1. 越复杂的软件，对工程师软件设计能力的要求就越高
+  2. 规模越大的软件，软件设计质量对整个软件产品质量的贡献也越大
