[GeekTime] Add the note for unit test

--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -33,3 +33,10 @@
 - 软件设计的两个洞察：
   1. 越复杂的软件，对工程师软件设计能力的要求就越高
   2. 规模越大的软件，软件设计质量对整个软件产品质量的贡献也越大
+- 单元测试的好处
+  - 将质量保证工作前置从而提升开发质量和效率
+  - 能很好地检验被测软件的设计质量
+  - 单元测试代码能很好地当作，被测软件产品代码的使用说明书
+  - 能提升被测代码在未来的可变性
+- 确保代码的未来可变性，是建立在实施单元测试之上的、软件行业非常重要的一种工程能力
+- 测试只能证明失败，不能证明成功
