[GeekTime] Add the engineer daily activity

--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -40,3 +40,6 @@
   - 能提升被测代码在未来的可变性
 - 确保代码的未来可变性，是建立在实施单元测试之上的、软件行业非常重要的一种工程能力
 - 测试只能证明失败，不能证明成功
+- 开发工程师日常：
+
+![](/assets/geektime/engineer_daily_activity.png)
