[GeekTime] Add the development tool

--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -43,3 +43,22 @@
 - 开发工程师日常：
 
 ![](/assets/geektime/engineer_daily_activity.png)
+
+- 软件开发日常工具：
+
+![](/assets/geektime/engineer_daily_tool.png)
+
+- 工具的选择与反思：
+  - 首选开源工具
+  - 工具可以像代码那样保存以及管理文件和各种文档，这个是大趋势（eg. Markdown）
+  - 跨 OS 功能（eg. Bazel）
+  - 操作系统的方便切换（eg. Windows WSL）
+- 软件开发方法论的发展：
+
+![](/assets/geektime/software_devlopment_envolve.png)
+
+- DevOps 方法论：
+
+![](/assets/geektime/devops_flow.png)
+
+- 敏捷软件开发聚焦的是软件开发的质效，DevOps 聚焦的是软件运维的质效，两者可以认为是相辅相成的关系
