--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -62,3 +62,6 @@
 ![](/assets/geektime/devops_flow.png)
 
 - 敏捷软件开发聚焦的是软件开发的质效，DevOps 聚焦的是软件运维的质效，两者可以认为是相辅相成的关系
+- 工作目标不是为了做完，而是让客户满意
+- 一个有客户服务意识的工程师，在规划工作和总结工作成果时，就会很自然地从客户的视角去表达，这样所表达出来的成果，是公司层面非常乐意看到的
+- 产品思维是一种以最终用户和市场需求为核心的思维方式，它强调在产品的设计、开发、迭代过程中，始终关注和优先考虑用户体验和产品所能带来的业务价值
