--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -66,3 +66,13 @@
 - 一个有客户服务意识的工程师，在规划工作和总结工作成果时，就会很自然地从客户的视角去表达，这样所表达出来的成果，是公司层面非常乐意看到的
 - 产品思维是一种以最终用户和市场需求为核心的思维方式，它强调在产品的设计、开发、迭代过程中，始终关注和优先考虑用户体验和产品所能带来的业务价值
 - 如果工作中选择不承担责任，那也意味着放弃了工作成果，工作成果与个体所承担的责任大小成正比
+- 不愿担责的原因：
+  - 怕失败
+  - 不自信
+  - 逃避压力
+  - 激励缺失
+  - 责权不匹配
+- 拿出勇气的重要亮点：
+  - 别太把自己当回事儿
+  - 就是失败了，其实自己也没多少东西可以输，大概率还赚了
+- 勇气是越用越多的积累品，而不是消耗品
