[GeekTime] Procedure for development

--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -76,3 +76,17 @@
   - 别太把自己当回事儿
   - 就是失败了，其实自己也没多少东西可以输，大概率还赚了
 - 勇气是越用越多的积累品，而不是消耗品
+
+![](/assets/geektime/engineer_work_steps.png)
+
+- 上面这张工作流程图的好处：
+  - 分解复杂任务，责任到人，促进沟通与协作，确保工作质效
+  - 通过标准化，规避因个体差异所带来的混乱，便于新员工培训
+  - 使流程可视化，方便持续优化和传承
+- 当企业通过流程化去追求质效时，必然带来的一个结果就是，对工作流程中的员工螺丝钉化
+- 方法论是一种更高阶的思维模式，它通过抽象总结用模型对思维进行表达，从而方便传播、理解和运用
+- 方法论来自实践，又指导于实践，在运用它的时候还得重视对它进行迭代与完善
+- 工程方法论 = 流程 + 工具
+  - 关键要素有形化
+  - 工具和流程的无缝整合
+  - 以单元测试为中心
