Add the note for email usage

--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -90,3 +90,6 @@
   - 关键要素有形化
   - 工具和流程的无缝整合
   - 以单元测试为中心
+- 职场的潜规则是，**收到邮件后保持沉默就是对内容的确认**
+- 将需要跟进的邮件加入星标，用来查看任务是否落实，如有必要做好跟进
+- 设定标签，将重要的邮件分门别类放好，这样以后寻找更加方便
