--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -93,3 +93,5 @@
 - 职场的潜规则是，**收到邮件后保持沉默就是对内容的确认**
 - 将需要跟进的邮件加入星标，用来查看任务是否落实，如有必要做好跟进
 - 设定标签，将重要的邮件分门别类放好，这样以后寻找更加方便
+- 减少个人精神内耗很重要的一个原则是，基于正确的立场果断做事，让对方去精神内耗而不是自己
+- 因为对待遇不满意而影响个人的工作投入度和成长速度是不明智的，容易出现 “能力和待遇都上不去” 的尴尬
