[GeekTime] Add content for cooperate with manager

--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -95,3 +95,15 @@
 - 设定标签，将重要的邮件分门别类放好，这样以后寻找更加方便
 - 减少个人精神内耗很重要的一个原则是，基于正确的立场果断做事，让对方去精神内耗而不是自己
 - 因为对待遇不满意而影响个人的工作投入度和成长速度是不明智的，容易出现 “能力和待遇都上不去” 的尴尬
+- 与主管相处要把握好的核心原则是：**相互成就**
+- 帮助主管的 3 个方法：
+  - 做好份内之事成为靠谱的人
+  - 主动分担主管的任务
+  - 做事出彩（工作结果超出预期、得创新）
+- 和主管相处的 5 点注意：
+  - 与主管之间不要有零和博弈的行为，用共赢取代才好
+  - 积极主动沟通
+  - 保持独立人格
+  - 学会妥协
+  - 确保主管是靠谱的
+- 对于心智和行事成熟的人来说，妥协是褒义词而非贬义词
