[GeekTime] Communication & Boundary

--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -107,3 +107,13 @@
   - 学会妥协
   - 确保主管是靠谱的
 - 对于心智和行事成熟的人来说，妥协是褒义词而非贬义词
+- 在工作中需要特别警惕，一些人的 “为了你好” 其实只是为了解决他自己的问题，没有将你的问题放在心上，背后反映的是对你的不尊重，甚至是自以为是
+- 如何守住边界的五条建议
+  - 内心重视明确自己的边界
+  - 力争有效沟通，使用主语是 “我” 的语句，来表达自己的感受，以便减少对方的防御心态，让对话更具建设性
+  - 注意保持冷静
+  - 寻求共赢的解决方案
+  - 适当寻求帮助
+- 一旦高层管理者做出了决策，整个决策链所希望看到的情形，可不是花时间与你解释或争执，为何要将目标定得那么高，而是希望看到你能围绕那个目标想办法去达成
+- 想清楚了可能的后果并选择承担的话，大胆做就是了。何况，如果错了还可以道歉
+- 在与人发生冲突时，得多思考自己的立场是不是更高，这样才能站得更稳，更有可能胜出
