[GeekTime] suggestion for detail

--- a/geektime/工程师个人发展指南.md
+++ b/geektime/工程师个人发展指南.md
@@ -117,3 +117,13 @@
 - 一旦高层管理者做出了决策，整个决策链所希望看到的情形，可不是花时间与你解释或争执，为何要将目标定得那么高，而是希望看到你能围绕那个目标想办法去达成
 - 想清楚了可能的后果并选择承担的话，大胆做就是了。何况，如果错了还可以道歉
 - 在与人发生冲突时，得多思考自己的立场是不是更高，这样才能站得更稳，更有可能胜出
+- 把握细节的核心原则是将工作做到位
+  - 将工作努力做到不会出错，出了错就从根源上加以解决和预防
+  - 将工作做到容易交接
+  - 将工作做到经得起他人的询问甚至是质问
+  - 工作过程与成果符合团队的制度要求
+- 形成关注细节的习惯的建议
+  - 信念先行，形成一个好习惯的第一步在于相信。相信它是稀缺的，对自己、团队乃至社会是有价值的
+  - 在过程中接受孤独
+  - 身先士卒
+- 格局的提升、心灵空间的增大，某种程度上与个人曾经扛过多大的事和面对过多大的不确定性是强相关的
