[GeekTime] Technical to manager

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -10,3 +10,24 @@
 - 哪怕你做的可行性研究不能改变决策，最后项目结束的时候，和当初做的可行性研究做一下对比，也都是非常宝贵的项目经验积累
 - 如果可行性研究并不能给你一个很明确的结果，也可以考虑小范围试点，先实现一个最小化可行产品，等验证了可行性，再逐步加大投入
 
+## 技术转项目管理
+
+- 项目管理通常是技术人员转型管理的第一步
+- 想要技术转型管理，首先从转变思维方式开始，从技术思维到管理思维，从关注细节到关注整体
+- 就软件项目管理来说，“道” 就是管好人、管好事
+  - 怎样管好软件项目中的人？
+    - 管理好客户的预期
+    - 用流程和规范让项目成员一起紧密协作
+  - 怎样管好软件项目中的事？（对项目中事情的管理，本质上就是对软件开发过程的管理）
+    - 选择适合项目的开发模式（瀑布模式或敏捷开发）
+    - 制定好项目计划
+    - 对计划进行跟踪和控制，同时做好风险管理
+
+    ![](/assets/geektime/software_project_management.png)
+
+- 技术转管理的一些经验教训
+  - 控制你想写代码的冲动（技术人员转型管理的最大障碍是什么，那就是过于关注技术，而忽略了其他事情）
+  - 团队的成功，才是你的成功（并不是你把上级的工作做了就能升职，而是你的下级都成长了，能替代你的位置了，你就可以升职了）
+  - 形成自己的管理风格（完全可以根据自己的特点，找到适合自己的管理风格）
+  - 坚持就是胜利
+
