[GeekTime] Plan for the project

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -31,3 +31,23 @@
   - 形成自己的管理风格（完全可以根据自己的特点，找到适合自己的管理风格）
   - 坚持就是胜利
 
+## 项目计划
+
+- 参与做计划的过程，可以让你对项目的各种事情了然于胸，这就相当于扩大了你的上下文，让你有更高的视角看待当前工作遇到的问题
+  - 试着做计划就是一个非常好的培养大局观的方式
+  - 你在制定计划的过程中，需要去综合考虑各种因素：有哪些任务要做，可能存在什么风险，任务之间的依赖关系是什么，等等
+- 制定项目计划的三个基本步骤
+  1. 任务分解
+    - WBS（Work Breakdown Structure）就是把要做的事情，按照一个树形结构去组织，逐级分解，分割成小而具体的可交付结果，直到不能再拆分为止
+    - 在制定计划时，除了要拆分任务，还需要反复思考各种可能存在的问题
+  2. 估算时间
+    - 任务拆分的越细致，想的越清楚，就能估算的越准确
+    - 要让负责这个任务的人员参与估算
+    - 提问可以帮助双方搞清楚真实的情况是什么样的，而且也不会招致反感
+    - 对于估算的结果，通常还要考虑增加一些余量，因为实际项目执行过程中，有可能会有突发状况
+  3. 排任务路径
+    - 排路径就是要根据任务之间的关系，资源的占用情况，排出合适的顺序
+- 对于周期很长的项目，可以设置里程碑。一来可以通过 DDL 来推动进度，二来对成员也有比较好的激励
+- 项目管理中，并不是计划制定好了就完事了，还需要跟踪和调整，敏捷开发的两个实践：
+  - 每日站立会议
+  - 看板
