--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -51,3 +51,16 @@
 - 项目管理中，并不是计划制定好了就完事了，还需要跟踪和调整，敏捷开发的两个实践：
   - 每日站立会议
   - 看板
+
+## 流程和规范
+
+- 好的项目管理，不需要直接管人管事，而是管理好计划和流程规范；项目成员不需要按照项目经理的指令做事，而是遵循计划和流程规范
+- 制定流程规范的四个步骤：
+  1. 明确要解决的问题
+  2. 提出解决方案
+  3. 达成共识，推广执行
+  4. 持续优化，不断改进
+- 应该尽可能借助技术手段来推动甚至替代流程规范
+  - IDE 中的代码检查工具
+  - CI/CD
+  - git
