[GeekTime] More effective meeting

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -64,3 +64,21 @@
   - IDE 中的代码检查工具
   - CI/CD
   - git
+
+## 开会
+
+- 会议是不是有效率，取决于它创造的价值是不是高于其成本
+  - 比如说有的会议，花的成本不是组织者的，对他来说，得到他的会议价值就可以了
+- 跟软件项目金三角的理论一样，只要从两个角度去想办法：减少开会的成本，增加开会创造的价值
+- 减少开会成本的方法：
+  - 砍掉一些没有价值的会议
+    - 没有目标
+    - 不能形成决策，没有会后行动
+    - 你属于可有可无的角色
+    - 可以通过创建文档来避免的会议
+  - 减少参与会议的人
+  - 缩短开会时间
+  - 提升会议所创造的价值
+    - 每个会议要有明确的目的和主题，所有的讨论都要围绕会议目的展开
+    - 还有开会后，要有明确的结论，有后续的待办事项，落实到个人，对待办事项有跟踪
+    - 没什么价值的会议，又必须要参加的会议，可以在会前找些需要解决的难题，然后在会上思考，这样可以避免时间的浪费
