[GeekTime] Project management tools

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -82,3 +82,11 @@
     - 每个会议要有明确的目的和主题，所有的讨论都要围绕会议目的展开
     - 还有开会后，要有明确的结论，有后续的待办事项，落实到个人，对待办事项有跟踪
     - 没什么价值的会议，又必须要参加的会议，可以在会前找些需要解决的难题，然后在会上思考，这样可以避免时间的浪费
+
+## 项目管理工具
+
+- 一个任务，只有 0% 和 100% 两种状态是准确的，中间状态都是不靠谱的
+- 项目管理工具的演变
+  - 最初的项目管理软件：MS Project
+  - 基于 Ticket 的任务跟踪系统
+  - 基于看板的可视化任务管理
