[GeekTime] Risk management

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -92,3 +92,23 @@
   - 基于看板的可视化任务管理
 
 ## 风险管理
+
+- 风险管理就是指在项目进行过程中，识别可能的风险，对风险进行评估，并加以监控，从而减少风险对项目的负面影响
+- 风险包含两个方面
+  1. 发生后，会造成什么样的损失
+  2. 发生的概率有多大
+- 如何做好风险管理
+  1. 培养风险意识
+    - 项目中的任务，不能盲目乐观，都思考一下它最坏的结果是什么，如果最坏的结果不能接受，就说明要有个 B 计划，考虑风险管理了
+  2. 管理风险
+    - 风险识别，识别可能的风险
+    - 风险量化，对风险进行评估量化（基于损失和概率）
+    - 应对计划，对风险制定应对策略
+      ![](/assets/geektime/risk_types.png)
+      - 回避风险——更改导致风险的方案，eg 用熟练的技术替代不熟练的技术
+      - 转移风险——将损失转嫁出去，eg 购买云服务
+      - 缓解风险——降低风险发生概率或减少可能造成的损失，eg 数据库定期备份
+    - 风险监控，对风险进行监控预警
+      - 对监控的内容量化
+      - 设置阈值
+      - 后续的报警和处理机制
