[GeekTime] Project documentation

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -112,3 +112,21 @@
       - 对监控的内容量化
       - 设置阈值
       - 后续的报警和处理机制
+
+## 项目文档
+
+- 先写文档，就会抛开代码细节，去站在全局思考
+- 文档写作，关键是通过文档把你的想法表达出来，至于用词、格式相对都是其次的
+- 具体可行的文档写作方法：
+  - 从模仿开始，参照一些成熟的模版来写
+  - 从小文档开始
+    - 别人给你讲一个问题的时候记录下来
+    - 你给别人讲一个问题的时候记录下来
+    - 解决一个技术难题时记录下来方案
+  - 从粗到细，迭代更新
+    - 脑图 -> PPT -> 收集反馈 -> 文档
+  - 基本的画图技巧
+    - 线框图
+    - 流程图
+    - 时序图
+    - 各种格式截图
