--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -130,3 +130,44 @@
     - 流程图
     - 时序图
     - 各种格式截图
+
+# 需求分析篇
+
+## 需求分析
+
+- 用户需求是由用户提出来的，期望满足自身一定需要的要求
+- 产品需求就是在分析提炼用户真实需求后，提出的符合产品定位的解决方案
+- 需求分析，就是对用户需求进行提炼分析，最终形成产品需求的过程
+- 针对每个用户需求的需求分析过程，需要经过三个步骤：
+  1. 挖掘真实需求
+    - 大部分用户提的需求，都不见得是其真实的需求，需要透过现象看本质，去挖掘其背后真实的需求
+    - 从**目标用户**、**使用场景** 和 **想要解决的问题** 三个角度入手
+  2. 提出解决方案
+  3. 筛选和验证方案
+
+- 软件项目的用户需求
+
+![](/assets/geektime/requirement_analysis.png)
+
+- 收集需求
+  - 潜在的方法：
+    - 头脑风暴
+    - 用户调研
+    - 竞品分析
+    - 快速原型
+- 分析需求
+  - 表层需求
+  - 深层需求
+  - 底层需求
+- 需求评估
+  - 以决定做还是不做，优先级如何，先做哪些再做哪些
+  - 考虑因素：
+    - 可行性
+    - 成本
+    - 商业风险和收益
+    - 紧急性与重要性
+- 需求设计
+  - 可以用草图、原型设计工具、界面设计工具进行设计
+  - 可以参考其他成熟的产品
+- 验证需求
+  - A/B 测试
