[GeekTime] Prototype design

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -171,3 +171,28 @@
   - 可以参考其他成熟的产品
 - 验证需求
   - A/B 测试
+
+## 原型设计
+
+- 第一阶段确认界面布局和内容，第二阶段确认交互，第三阶段实现
+- 可以将每次原型设计过程分成四个部分：分析、设计、实施和验证
+  1. 分析
+    - 需求分析
+  2. 设计
+    - 画产品的信息结构图，eg
+
+    ![](/assets/geektime/geektime_info_structure_graph.png)
+
+    - 画产品使用流程图，eg
+
+    ![](/assets/geektime/geektime_user_flow_graph.png)
+  3. 实施
+    - 对每个界面画流程图
+    - 要优先考虑满足产品需求，然后是让界面好看好用
+  4. 验证
+    - 一般在正式的项目中，针对原型设计，需要有相应的评审会议，让大家提出反馈，根据反馈再作出调整
+- 原型设计工具的选择
+  - 面向的平台：Web、桌面、手机
+  - 保真度：中等保真度还是高保真度
+  - 功能：是否满足你的要求
+  - 成本：价钱是否可以接受
