[GeekTime] Product mindset

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -196,3 +196,31 @@
   - 保真度：中等保真度还是高保真度
   - 功能：是否满足你的要求
   - 成本：价钱是否可以接受
+
+## 产品意识
+
+- 程序员的价值
+  1. 你的价值体现在你所做的产品上
+  2. 你的价值体现在团队中的稀缺性
+- 产品意识，本质就是一种思维方式，一种站在产品角度思考问题的方式
+  - 商业意识
+    - 所做的产品的商业价值
+    - 商业意识的另一方面其实是成本——成本意识
+  - 用户意识
+    - 做产品时，你要能挖掘出用户的真实需求，让产品有好的用户体验，这需要你要有同理心，能站在用户的角度去思考和体验产品
+    - 多一点用户意识，想到的问题将会多了很多维度，比如说：
+      - 能让自己的负责的模块有更好的体验
+      - 让自己的技术方案更好地满足用户需求，用户更满意
+      - 让自己设计的接口、API 更好用，与同事愉快合作
+  - 数据意识
+    - 在产品设计、产品运营时，通过数据来发现问题、证实结果
+- 如何培养产品意识
+  - 解放思想，改变习惯，多实践
+  - 技术思维会关注用什么技术，关注技术细节，关注功能 “如何” 实现；产品思维会关注用户体验，关注一个功能所创造的价值，会去思考为什么要或者不要一个功能，eg
+
+  ![](/assets/geektime/product_mindset_eg.png)
+
+  - 改变习惯是是指在日常使用产品、开发产品的时候，多站在产品的角度思考，去思考它的商业价值、用户体验、使用场景等等
+  - 自己开发的功能模块完成后，可以把自己当成用户试试，如果觉得体验不好或者有更好的建议，都可以反馈给产品经理
+  - 其实不用担心没有什么好的想法，可以从日常生活中，自己的需求、家人和朋友的需求中，去找到合适的产品需求
+
