[GeekTime] How to handle requirement change

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -224,3 +224,17 @@
   - 自己开发的功能模块完成后，可以把自己当成用户试试，如果觉得体验不好或者有更好的建议，都可以反馈给产品经理
   - 其实不用担心没有什么好的想法，可以从日常生活中，自己的需求、家人和朋友的需求中，去找到合适的产品需求
 
+## 如何应对需求变更问题
+
+- 两个常见的解决方案：
+  - 增强需求变更流程，让需求变更规范起来
+  - 快速迭代，缩短版本周期
+- 像软件工程这样偏理论知识的学习，一定不要停留在解决方案上，要追本溯源，研究问题背后的原因，研究理论背后的来龙去脉
+- 需求变更的原因：
+  - 需求的确定性
+    - 软件工程的需求是抽象的、模糊、不精确的，只有在开发有了雏形后，才会清楚真正的需求
+  - 需求变更的成本
+- 解决办法
+  - 提升需求确定性，把需求分析做好，减少需求变更
+  - 提高需求变更的成本，让客户或者产品经理不能太容易就变更需求
+  - 降低响应需求变更的成本，可以方便快捷地响应需求变更
