[GeekTime] Arch Design

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -240,3 +240,31 @@
   - 降低响应需求变更的成本，可以方便快捷地响应需求变更
 
 # 系统设计篇
+
+## 架构设计
+
+- 复杂的软件项目，通常有两个特点
+  - 需求不确定
+  - 技术复杂
+- 技术的复杂性通常体现在四个方面：
+  - 需求让技术变复杂
+  - 人员会让技术变复杂
+  - 技术本身也是复杂的
+  - 要让软件稳定运行是复杂的
+- 架构设计可以很好地解决技术复杂的问题：
+  - 架构设计可以降低满足需求和需求变化的开发成本
+  - 架构设计可以帮助组织人员一起高效协作
+  - 架构设计可以帮助组织好各种技术
+  - 架构设计可以保障服务稳定运行
+- 架构设计的 **目标**，是用最小的人力成本来满足需求的开发和响应需求的变化，用最小的运行成本来保障软件的运行
+- 架构设计的 **道**，就是组织人员和技术把系统和团队拆分，并安排好切分后的排列关系，让拆分后的部分能通过约定好的协议相互通信，共同实现最终的结果
+- 如何做好架构设计
+  1. 需求分析
+    - 一个常用的分析方法就是分析用例，也就是了解主要用户角色和其使用的场景
+  2. 选择相似的成熟的架构设计方案
+  3. 自顶向下层层细化
+    - 部署架构
+    - 分层和分模块
+      ![](/assets/geektime/geektime_arch_layer_graph.png)
+    - API 设计、数据库设计、模块的设计
+  4. 验证和优化架构设计方案
