[GeekTime] Techical selection & decision

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -268,3 +268,26 @@
       ![](/assets/geektime/geektime_arch_layer_graph.png)
     - API 设计、数据库设计、模块的设计
   4. 验证和优化架构设计方案
+
+## 技术选型
+
+- 技术选型看起来是个技术的选择，但其实是一个和项目情况密切相关的项目决策
+- 项目决策中常见的坑：
+  - 把听到的观点当事实
+    - 在做决策之前，至少需要验证一下
+  - 先入为主，有了结论再找证据
+- 如何做好技术选型：
+  - 问题定义
+    - 为什么需要技术选型？技术选型的目标是什么？
+    - 只有明确了技术选型的目标，才能有一个标准可以来评判该选择哪一个方案
+  - 调研
+    - 满足技术选型目标吗？
+    - 满足范围、时间和成本的约束吗？
+    - 是不是可行？
+    - 有什么样的风险？风险是不是可控？
+    - 优缺点是什么？
+  - 验证
+    - 可以通过一个小型的快速原型项目，用候选的技术方案快速做一个原型出来
+  - 决策
+    - 在调研和验证完成后，可以召集所有利益相关人一起，就选择的方案有一个调研结果评审的会议，让大家提出自己的意见，做出最终的决策
+- 技术选型，也不要太过于纠结，要勇于决策，选定了就坚定的去执行
