[GeekTime] Techical selection & decision

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -291,3 +291,4 @@
   - 决策
     - 在调研和验证完成后，可以召集所有利益相关人一起，就选择的方案有一个调研结果评审的会议，让大家提出自己的意见，做出最终的决策
 - 技术选型，也不要太过于纠结，要勇于决策，选定了就坚定的去执行
+- Make It Work -> Make It Right -> Make It Fast
