[GeekTime] How To Become An Architecter

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -292,3 +292,27 @@
     - 在调研和验证完成后，可以召集所有利益相关人一起，就选择的方案有一个调研结果评审的会议，让大家提出自己的意见，做出最终的决策
 - 技术选型，也不要太过于纠结，要勇于决策，选定了就坚定的去执行
 - Make It Work -> Make It Right -> Make It Fast
+
+## 架构师
+
+- 对于程序员来说，并不代表一定要有一个架构师的头衔，而是心中有大局观，有架构师的思维，从而能理解架构设计，能写出好的程序
+- 对于架构师来说，要控制技术复杂性，有几种有效的方式：**抽象、分治、复用和迭代**
+- 抽象思维
+  - 在软件项目中，遇到类似的场景，就会考虑抽象出来，总结一个规则和方法
+  - 在架构设计中，对需求进行抽象建模后，可以帮助我们隐藏很多无关紧要的细节
+- 分治思维
+  - 对复杂系统分而治之，分解成小的、简单的部分
+- 复用思维
+  - 通过对相同内容的抽象，让其能复用于不同的场景
+- 迭代思维
+  - 好的架构设计，通常不是一步到位，而是先满足好当前业务需求，然后随着业务的变化而逐步演进
+- 一个好的架构师，不仅技术要好，还要懂业务；能从整体设计架构，也能在局部实现功能
+- 要成为好的架构师，需要具备几个条件：
+  - 有架构师思维：具备良好的抽象思维、分治思维、复用思维和迭代思维
+  - 懂业务需求：能很好地理解业务需求，能针对业务特点设计好的架构
+  - 有丰富的编码经验：像抽象、分治、复用这些能力，都需要大量的编码练习才能掌握，另外保持一定量的编码经验也有助于验证架构设计
+  - 良好的沟通能力：架构师需要沟通确认需求，需要让团队理解架构设计
+- 如何成为一个好的架构师：
+  - 要成为一个优秀的程序员
+  - 多模仿，多学习
+  - 选择好行业和平台
