--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -316,3 +316,41 @@
   - 要成为一个优秀的程序员
   - 多模仿，多学习
   - 选择好行业和平台
+
+## 技术债务
+
+- 债务的 “利息”，就是在后面对软件做修改的时候，需要额外的时间成本
+- 技术债务不一定都是坏的，比如
+  - 快速原型开发模型
+  - 提升短期的开发速度，让软件能尽快推出
+- 对于项目中的债务，我们要清楚的知道有哪些技术债务，以及它给项目带来的收益和产生利息，这样才能帮助我们管理好这些债务
+- 技术债务产生的原因
+  - 轻率（reckless）还是谨慎（prudent）
+  - 有意（deliberate）还是无意（inadvertent）
+
+![](/assets/geektime/technical_debt.png)
+
+- 识别技术债务
+  - 开发速度降低
+  - 单元测试代码覆盖率低
+  - 代码规范检查的错误率高
+  - Bug 数量越来越多
+
+- 处理技术债务的策略
+  - 重写：推翻重来，一次还清
+  - 维持：修修补补，只还利息
+  - 重构：新旧交替，分期付款
+
+- 通常，如果你纠结于不知道该选择哪一种策略时，那就选择重构的策略，因为这是相对最稳妥有效的
+
+- 实施策略
+  - 对于重写的策略，要当作一个正式的项目来立项，按照项目流程推进
+  - 对于重构的策略，要把整个重构任务拆分成一个个小任务，放到项目计划中，创建成 Ticket，放到任务跟踪系统中跟踪起来
+  - 对于维持的策略，也要把需要做的修补工作作为任务，放到计划中，放到任务跟踪系统中
+
+- 实施策略的关键就在于要落实成开发任务，作为项目计划的一部分
+
+- 预防才是最好的方法
+  - 预先投资：弄好架构设计、写好代码
+  - 不走捷径：做好代码审查、保障单元测试代码覆盖率
+  - 及时还债：把欠下的债务记下，放到任务跟踪系统中，安排在后续的开发任务中
