[GeekTime] Ways to improvement development efficiency

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -354,3 +354,30 @@
   - 预先投资：弄好架构设计、写好代码
   - 不走捷径：做好代码审查、保障单元测试代码覆盖率
   - 及时还债：把欠下的债务记下，放到任务跟踪系统中，安排在后续的开发任务中
+
+
+# 开发编码篇
+
+## 提高开发效率的方法
+
+- 积极主动
+  - **想想再回应**（在回应之前，给自己一点时间想想，站在积极的方面理性思考一下，控制本能反应）
+  - **减少关注圈，扩大影响圈**
+    - 要区分哪些事，是我可以影响和掌控的，这些事则是 “影响圈”
+    - 不要总盯着自己无法改变的部分，你需要要多花时间精力在影响圈上
+    - 接受不能改变的，改变能改变的，尽量扩大可改变项的范围
+- 以终为始
+  - **经常停下来想想目标**
+    - 我的原始目标是什么？我正在做的事是我的目标吗？如果不是，那么马上回到自己的原始目标去
+  - **制定原则**，比如：
+    - 增加一个功能，就要写自动化测试，如果来不及写，就给自己写一条 Ticket
+    - 先运行再优化 (Make it Work Make It Right Make It Fast)
+    - 不复制粘贴代码 (Don’t repeat yourself)
+    - 每个 Pull Request 要尽可能小
+  - **公开自己的计划**
+    - 有了计划指引和时间点的压力，会倒逼着自己时刻专注于目标是什么
+- 要事第一
+  - 重要紧急的事情马上处理
+  - 重要不紧急的要事，要花最多的时间在上面
+  - 紧急不重要的事凑一起集中做
+  - 不重要不紧急的事情能不做就不做
