--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -381,3 +381,53 @@
   - 重要不紧急的要事，要花最多的时间在上面
   - 紧急不重要的事凑一起集中做
   - 不重要不紧急的事情能不做就不做
+
+## 持续交付
+
+- 持续交付如果细分，其实可以分成持续集成、持续交付和持续部署三个概念
+- 集成
+  - 集成指的是每个人把自己开发的分支代码，合并到主干上，以便测试打包
+  - 传统的集成，都是在开发阶段整体完成的差不多了，才开始集成，而持续集成的做法，则是每次有代码合并入主干之前，都进行集成，持续的集成
+  - 代码集成到主干之前，必须通过自动化测试，只要有一个测试用例失败，就不能集成
+
+  ![](/assets/geektime/continuous_integration.png)
+
+  - 持续集成的好处：
+    - 配合自动化测试，这样可以保证主干的代码是稳定的
+    - 频繁集成可以让开发人员总能从主干及时获得最新的代码，不至于像类库、API 不一致等问题到最后测试的阶段才暴露出来
+  - 持续集成主要的问题就是搭建整个持续集成环境，要稍微麻烦一点，另外需要配合一些流程规范来辅助执行
+- 交付
+  - 交付则指的是软件产品在测试验收通过后，具备发布到生产环境交付给客户使用的条件
+  - 持续交付，就是在持续集成的基础上，再进一步，在功能合并到主干后，不仅会进行自动化测试，还会打包，并部署到测试环境中
+
+  ![](/assets/geektime/continuous_delivery.png)
+
+  - 把持续交付的工作做好后，部署生产环境会变得非常简单，只需要点一下按钮或者运行一个命令，就可以很快完成
+  - 持续交付，对于生产环境的部署，依然需要有手动确认的环节
+- 部署
+  - 部署指的是将代码发布到各种环境，比如部署测试环境以供测试
+  - 从手动部署到脚本自动化部署
+    - 自动化逐步应用到运维领域，确实是让部署过程更容易，但也只是让部署过程更容易，还是无法解决发布版本的质量问题
+  - 持续部署，和持续交付唯一的不同，就是手动确认的环节都没有了，每次代码从分支合并到主干，在自动化测试通过后，会直接自动部署生产环境，不需要人工确认
+
+- 好处：
+  - 持续交付并不能消除 Bug，而是让它们非常容易发现和改正
+  - 持续交付让开发过程中从代码合并，一直到最终部署，都实现了自动化，能极大程度上提高效率
+  - 每次合并之前都需要通过自动化测试，因此错误会少很多
+  - 在最初搭建持续交付环境的时候，是要投入一定成本的，但是从长远看，开发效率提升了，代码质量提高了，反而是对降低项目的整体成本有帮助的
+
+- 如何搭建持续交付环境
+  - 持续集成
+    - 需要有源代码管理工具——Git
+    - 需要写自动化测试代码
+  - 持续交付
+    - 对代码构建的过程可以反复进行，并且每次构建的结果是一致的、稳定的
+    - 所有环境的配置都存在于源代码管理工具中，不仅仅是代码
+    - 需要自动创建针对于不同环境的发布包
+    - 所有环境的部署发布步骤都必须是自动化的
+  - 持续集成工具
+    - Jenkins
+    - Go CD
+    - Travis CI
+    - GitLab CI
+    - Azure Pipelines
