[GeekTime] The core abilities of software engineer

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -431,3 +431,13 @@
     - Travis CI
     - GitLab CI
     - Azure Pipelines
+
+## 软件工程师的核心竞争力
+
+- 学习能力、解决问题能力和影响力构成了软件工程师的核心竞争力
+  - 最底层、最基础的就是学习能力，通过学习能力，快速学习掌握新技术
+  - 中间一层就是解决问题的能力，充分利用学到的技术，去发现问题、分析问题和解决问题
+  - 最上一层就是影响力，是核心竞争力的综合体现
+
+![](/assets/geektime/software_engineer_pyramid.png)
+
