[GeekTime] How to improve core abilities of software engineer

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -441,3 +441,22 @@
 
 ![](/assets/geektime/software_engineer_pyramid.png)
 
+- 如何构建自己的知识体系
+  - 首先需要在一个技术领域深耕
+    - 只有一个领域的知识你真正吃透，才能有效地共享到其他领域，构成一个知识领域的森林
+  - 往相近的领域逐步横向拓展
+- 如何提高解决问题的能力
+  - 解决问题的一套方法论：
+    1. 明确问题
+      - 搞清楚目标是什么，才能做到有的放矢
+    2. 拆分和定位问题
+      - 一个复杂的问题，只有经过拆分，才好找到本质的问题
+    3. 提出解决方案并总结
+      - 发现并分析完问题后，找到解决方案是容易的，但很有必要总结一下，总结两点：
+        - 下次有这种问题怎么解决，是不是可以做的更好？
+        - 这种问题是不是可以预防？如果可以，应该怎么做？
+- 如何提升影响力
+  - 在某个领域做出了足够牛的成绩
+  - 做事情超出预期
+  - 帮助其他人就是在帮助自己
+  - 分享就是学习和打造影响力
