[GeekTime] Automatic testing

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -355,7 +355,6 @@
   - 不走捷径：做好代码审查、保障单元测试代码覆盖率
   - 及时还债：把欠下的债务记下，放到任务跟踪系统中，安排在后续的开发任务中
 
-
 # 开发编码篇
 
 ## 提高开发效率的方法
@@ -460,3 +459,43 @@
   - 做事情超出预期
   - 帮助其他人就是在帮助自己
   - 分享就是学习和打造影响力
+
+## 自动化测试
+
+- Google 将自动化测试分成了三大类：小型测试、中型测试和大型测试，eg.
+
+![](/assets/geektime/auto_testing_example.png)
+
+- 小型测试
+  - 小型测试是为了验证一个代码单元的功能，例如针对一个函数或者一个类的测试，比如单元测试
+  - 小型测试的运行，不需要依赖外部
+  - 如果有外部服务（比如文件操作、网络服务、数据库等），必须使用一个模拟的外部服务
+- 中型测试
+  - 中型测试是验证两个或多个模块应用之间的交互，通常也叫集成测试
+  - 对于中型测试，可以使用外部服务（比如文件操作、网络服务、数据库等），可以模拟也可以使用真实的服务
+  - 至于中型测试要不要使用模拟的服务，有个简单的标准，就是看能不能在单机情况下完成集成测试，如果可以就不需要模拟，如果不能，则要模拟避免外部依赖
+- 大型测试
+  - 大型测试则是从较高的层次运行，把系统作为一个整体验证，大型测试也叫系统测试或者端对端测试
+  - 对于大型测试，通常会直接使用外部服务（比如文件操作、网络服务、数据库等），而不会去模拟
+- 契约测试
+  - 让微服务在测试时，不需要依赖于引用的外部的微服务，在本地就可以模拟运行，同时又可以保证外部微服务的接口更新时，本地模拟的接口（契约）也能同步更新
+  - 中型测试的一种了，因为它不需要依赖外部服务，本机就可以完成测试
+
+- 不同测试的区分
+
+![](/assets/geektime/test_categories.png)
+
+- 越是小型测试，执行速度越快，越是大型测试，执行速度越慢
+- 另外越是大型测试，写起来的成本也相应的会更高，所以一般项目中，小型测试最多，中型测试次之，大型测试最少
+- 测试代码的四部分：
+  - 准备
+  - 执行
+  - 断言
+  - 清理
+- 一个完整的自动化测试要包括三个部分的测试
+  - 验证功能是不是正确：例如说输入正确的用户名和密码，要能正常注册账号
+  - 覆盖边界条件： 比如说如果用户名或密码为空，应该不允许注册成功
+  - 异常和错误处理：比如说使用一个已经用过的用户名，应该提示用户名被使用
+- 让自动化测试在持续集成上运行非常重要，只有这样才能最大化地发挥自动化测试的作用
+
+![](/assets/geektime/test_in_cicd_env.png)
