--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -499,3 +499,31 @@
 - 让自动化测试在持续集成上运行非常重要，只有这样才能最大化地发挥自动化测试的作用
 
 ![](/assets/geektime/test_in_cicd_env.png)
+
+## 源代码管理工具
+
+- 如何用好源代码管理工具
+  1. 要频繁的提交
+    - 便于 Code Review
+    - 如果出现问题，也可以迅速定位或者直接回滚
+    - 让团队成员可以及时同步最新代码，不至于在最后合并时，产生有大量的合并冲突
+  2. 每次提交后要跑自动化测试
+    - 对问题进行甄别和修复，确保提交的代码质量是没问题的
+  3. 提交的代码要有人审查
+- Github 开发流程的几个常见问题
+  - **怎么发布版本？**
+    - 从 master 上创建一个 Tag，例如 v1.0，然后将 Tag v1.0 上的内容部署到生产环境
+  - **怎么给线上版本打补丁？**
+    1. 基于之前的 Tag 创建一个分支（例如 hotfix-v1.0-xxx）出去
+    2. 在分支上修复，然后提交 PR，代码审查和自动化测试通过后，从分支上创建一个新的 Tag （例如 v1.0.1）
+    3. 将新的 Tag 发布部署到生产环境
+    4. 最后再把修改合并回 master
+  - **如果我经常需要打补丁，有没有比 Tag 更好的办法？**
+    1. 每次发布后，可以创建一个发布版本的分支，例如 release-v1.0
+    2. 每次打补丁，都直接从发布分支 release-v1.0 而不是 master 创建新的分支（例如 hotfix-release-v1.0-xxx）
+    3. 修复后提交 PR，代码审查和自动化测试通过后，合并回分支 release-v1.0
+    4. 然后基于 release-v1.0 分支发布补丁
+
+- 无论你基于哪一种开发流程，最好能做到这两点
+  - 有一个稳定的代码分支
+  - 在合并分支之前，对代码有审查，自动化测试要能通过
