--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -536,3 +536,5 @@
 - 软件质量的首要负责人是项目负责人，其次是开发人员，然后才是软件测试
 - 但人人为质量负责，很容易变成一句口号而很难落实。就像三个和尚没水喝的故事里面那样，当质量变成每个人的责任时，就没有人真正为质量负责了
 - 要做到 “人人为产品质量负责”，要落到行动而不是口号上，组织上扁平化、小型化，分工上打破岗位墙，制度上鼓励大家重视质量，才能真正建立重视产品质量的文化，一起把产品的质量提升上去
+
+## 测试工具
