[GeekTime] Software testing

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -537,4 +537,15 @@
 - 但人人为质量负责，很容易变成一句口号而很难落实。就像三个和尚没水喝的故事里面那样，当质量变成每个人的责任时，就没有人真正为质量负责了
 - 要做到 “人人为产品质量负责”，要落到行动而不是口号上，组织上扁平化、小型化，分工上打破岗位墙，制度上鼓励大家重视质量，才能真正建立重视产品质量的文化，一起把产品的质量提升上去
 
+- 如果对软件测试的工作简单总结一下，就是发现 Bug，报告 Bug，跟踪 Bug
+- 开发人员的重点是放在如何实现上，而测试人员的重点是在检测
+- 尽可能多的测试覆盖的方法：
+  1. **等价类划分**
+    - 如果一类数据对于发现 Bug 的效果是一样的，那么这类数据就是一个等价类，测试的时候只要从里面任意选取一个值就好了
+  2. **边界值分析**
+    - 对等价类的补充，因为输入输出的边界是非常容易出错的一个地方
+  3. **探索性测试**
+    - 探索性测试就是根据前面的测试结果，通过有效的策略进行测试
+- 回归测试是指修改了旧代码后重新进行测试，以确认修改没有引入新的错误或导致其他代码产生错误
+
 ## 测试工具
