--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -549,3 +549,9 @@
 - 回归测试是指修改了旧代码后重新进行测试，以确认修改没有引入新的错误或导致其他代码产生错误
 
 ## 测试工具
+
+- 用 QQ 或者邮件报 Bug 的这种方式，看起来快捷简单，但是问题很多：
+  - Bug 不能有效被跟踪，不知道一个 Bug 是不是已经被修复了
+  - 效率很低，开发人员频繁的被这样的报 Bug 的消息打断，不得不停下手头的工作去甄别 Bug
+  - 不能直观的了解当前项目的 Bug 状态，比如说：修复了多少，还有多少没有修复，近期 Bug 数量是增加了还是减少了
+- 在软件项目中，要把好的实践流程化，把好的流程工具化，Bug 跟踪工具则很好的贯彻了这一点，将 Bug 的解决过程流程化
