[GeekTime] Software security

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -555,3 +555,38 @@
   - 效率很低，开发人员频繁的被这样的报 Bug 的消息打断，不得不停下手头的工作去甄别 Bug
   - 不能直观的了解当前项目的 Bug 状态，比如说：修复了多少，还有多少没有修复，近期 Bug 数量是增加了还是减少了
 - 在软件项目中，要把好的实践流程化，把好的流程工具化，Bug 跟踪工具则很好的贯彻了这一点，将 Bug 的解决过程流程化
+
+## 安全问题
+
+- 三大类安全问题：
+  1. 恶意输入
+    - 应对恶意输入的问题，最简单有效的方式就是对用户输入的数据，做严格的校验，格式化
+  2. 假冒身份
+    - 对用户的身份做验证，尤其是涉及敏感权限的操作，甚至要做两重验证
+  3. 数据泄露
+    - 提前做好预防措施，对敏感数据进行加密
+
+- 如何预防软件中的安全问题
+  - 在确定需求，做产品设计的时候，不仅要考虑到功能上的需求，还要同时考虑到安全方面的要求
+  - 在做设计架构时，最重要的事就是要把安全加入到设计目标
+    - **攻击面最小化** 的设计原则，就是说尽量减少暴露黑客可能发现并试图利用的攻击面数量，eg.
+      - 关闭外网访问
+      - 单点认证，单点登录
+    - **权限最小化** 的设计原则就是对于系统的用户、文件访问、进程运行等，都只给予其能拥有的最小权限
+    - **纵深防御** 的设计原则，指的是从不同的维度去实施安全保护措施，从而缓解被攻击的风险
+  - 对于开发阶段的安全问题预防，需要从以下几个方面入手
+    - 编码规范中加入安全相关的内容, eg.
+      - 输入数据校验
+      - 对于涉及权限的操作，要检查用户权限
+      - 对于敏感数据要进行加密处理
+      - 对于用户的操作，要有日志记录
+      - 不能在日志中记录敏感信息
+    - 要有代码审查
+    - 增加安全相关的自动化测试
+  - 上线维护：
+    - 上线部署时，不部署源代码，只对编译后程序部署；删除 Debug 文件
+    - 对服务器进行安全设置，比如说严格限制端口，只保留必须的端口
+    - 只对少数服务器开发外放服务
+    - 开启操作日志
+    - 对访问目录设置最小的权限
+- 安全问题就像程序的 Bug 一样，没有谁能保证绝对的安全，就像风险管理的最后一步风险监控那样，我们必须做好 Plan B，万一出现安全问题，马上应对，将损失降到最低
