[GeekTime] Version release

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -590,3 +590,31 @@
     - 开启操作日志
     - 对访问目录设置最小的权限
 - 安全问题就像程序的 Bug 一样，没有谁能保证绝对的安全，就像风险管理的最后一步风险监控那样，我们必须做好 Plan B，万一出现安全问题，马上应对，将损失降到最低
+
+# 运行维护篇
+
+## 版本发布
+
+- 对软件版本来说，包含两部分含义，一部分代表特定功能集合，一部分代表某一次特定的代码构建结果
+- 软件版本的命名：
+
+```
+主版本号 . 子版本号.[. 修正版本号.[构建版本号]]
+```
+
+- 其中主版本号和子版本号用来标识功能变化，小的功能变化增加子版本号，大的功能变化增加主版本号
+- 修正版本号则表示功能不变化的情况下修复 Bug，而构建版本号表示一次新的构建，这个通常由编译程序自动生成
+
+- 版本发布的规划：
+  1. 规划好要发布的功能
+  2. 设计好发布策略
+  3. 有一个综合性的版本发布计划
+
+- 大厂的发布流程
+  1. 发布之前要做代码冻结
+  2. 对代码冻结后发现的 bug 要分级
+  3. 每次修复 bug 后，发布新的候选版本
+  4. 每次部署新的候选发布版本后，要做回归测试
+  5. 申请上线发布
+  6. 部署发布
+  7. 上线后的测试
