--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -618,3 +618,17 @@
   5. 申请上线发布
   6. 部署发布
   7. 上线后的测试
+
+## DevOps
+
+- DevOps 可以理解为一种开发（Development）和运维（Operations）一起紧密协作的工作方式，从而可以更快更可靠的构建、测试和发布软件
+- 采用 DevOps 的好处：
+  - 整个软件的构建、测试和发布过程高度自动化
+  - 信息更加透明和易于测量
+  - 培养跨职能协作的文化
+- DevOps 所需要做的事情
+  1. DevOps 工程师要帮助团队建立基于持续集成和持续交付工作流程
+  2. 建立一套基于日志的监控报警的系统，以及故障响应的流程
+  3. 构建基于云计算和虚拟化技术的基础设施
+  4. 形成 DevOps 的文化
+- 本质上还是 DevOps 的几条基本原则：**自动化、信息透明可测量、构建协作文化**
