[GeekTime] Solve online problem

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -632,3 +632,16 @@
   3. 构建基于云计算和虚拟化技术的基础设施
   4. 形成 DevOps 的文化
 - 本质上还是 DevOps 的几条基本原则：**自动化、信息透明可测量、构建协作文化**
+
+## 线上故障
+
+- 解决线上问题的步骤
+  1. 评估影响范围
+  2. 试图重现问题
+  3. 临时方案和终极方案
+  4. 风险评估及持续优化
+
+- 基本原则就是要先尽快恢复生产减少损失，然后再去查找原因，最后不要忘记总结复盘
+- 高手快速定位 Bug 在哪，关键在于通过有效的手段，逐步缩小问题范围，直到找到 Bug 在哪里
+- recovery 大于 find root cause
+- 实战演习就是频繁地对故障进行演练，来测试平时做的这些方案是不是真的可行，这样遇到真正的故障，才不至于手忙脚乱不知道如何应对
