[GeekTime] Logging management

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -645,3 +645,14 @@
 - 高手快速定位 Bug 在哪，关键在于通过有效的手段，逐步缩小问题范围，直到找到 Bug 在哪里
 - recovery 大于 find root cause
 - 实战演习就是频繁地对故障进行演练，来测试平时做的这些方案是不是真的可行，这样遇到真正的故障，才不至于手忙脚乱不知道如何应对
+
+## 日志管理
+
+- ELK 日志管理系统
+
+![](/assets/geektime/elk_arch.png)
+
+- 所解决的问题：
+  - 如果你的网站或者服务出现故障，可以通过你设置好的自动报警规则第一时间通知值班人员，及时解决
+  - 假如你的某一个微服务出现异常，你可以从你的日志管理系统中直接对所有微服务的日志进行查询，快速定位到问题所在
+  - 在部署系统后，通过对 API 响应时间等数据指标的图形化显示，你可以直观的看到性能是上升了还是下降了
