[GeekTime] Project review

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -656,3 +656,15 @@
   - 如果你的网站或者服务出现故障，可以通过你设置好的自动报警规则第一时间通知值班人员，及时解决
   - 假如你的某一个微服务出现异常，你可以从你的日志管理系统中直接对所有微服务的日志进行查询，快速定位到问题所在
   - 在部署系统后，通过对 API 响应时间等数据指标的图形化显示，你可以直观的看到性能是上升了还是下降了
+
+## 项目复盘
+
+- 复盘总结四步骤：
+  1. 回顾项目结果
+    - 要做到准确和客观
+  2. 评估项目结果
+    - 只需要客观描述结果就好了，不需要去分析原因
+  3. 分析原因
+    - 只有分析清楚原因，才能总结出规律
+  4. 总结规律，落实行动
+- 对于项目的复盘，并不是说只有项目快结束了才要去做，日常项目中遇到一些特殊的事情，比如线上故障，也可以及时总结复盘，预防类似的事情再次发生
