[GeekTime] Small team apply software engineer

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -669,3 +669,23 @@
   4. 总结规律，落实行动
 - 对于项目的复盘，并不是说只有项目快结束了才要去做，日常项目中遇到一些特殊的事情，比如线上故障，也可以及时总结复盘，预防类似的事情再次发生
 
+# 经典案例解析篇
+
+## 小团队如何应用软件工程
+
+- 小团队存在的问题
+  - 成本敏感
+  - 人少活多
+  - 缺少流程规范
+- 小团队如何应用软件工程
+  - 团队建设
+    - 招有潜力的程序员培养
+    - 在招人时，也不能一味节约成本，还要注意梯队的建设，中间要有几个有经验的技术骨干帮助把控好代码质量
+    - 培养人主要还是要靠内部形成好的学习分享的机制
+    - 小团队的管理，核心在于营造好的氛围，鼓励成员自我驱动去做事
+  - 流程建设
+    - 一开始也不宜有太多的流程规范，不然，如果流程不合适反而会成为一种束缚，最好只是先设置最基本的流程规范，然后在实践过程中针对团队特点和业务特点去逐步完善
+    - 在开发周期上，应该缩短交付的时间，使用快速迭代的开发模型
+    - 构建基于源代码管理工具的开发流程
+    - 小团队应该尽可能使用现成的工具、框架，而避免自己造轮子，把主要精力放在业务功能的开发上面
+    - 让所有人都基于任务跟踪系统去提交需求和开发任务，对于提交需求和任务的人，也能通过任务跟踪系统，及时的了解到任务的进展
