[GeekTime] Why most project are dead

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -689,3 +689,20 @@
     - 构建基于源代码管理工具的开发流程
     - 小团队应该尽可能使用现成的工具、框架，而避免自己造轮子，把主要精力放在业务功能的开发上面
     - 让所有人都基于任务跟踪系统去提交需求和开发任务，对于提交需求和任务的人，也能通过任务跟踪系统，及时的了解到任务的进展
+
+## 为什么程序员的业余项目大多都死了
+
+- 主要因素：
+  - 想法大，时间少
+  - 过于追求技术，缺少约束
+  - 缺少产品能力和运营能力
+- 如何提升业余项目成功的概率？
+  - 调整范围这条边，可以采用 MVP（minimum viable product，最小化的可行性产品）的模式，一开始只推出最核心的功能，满足用户最核心的需求，然后在用户的使用过程收集反馈，进一步升级迭代
+  - 进行可行性研究，从经济可行性、技术可行性还有社会可行性方面，去分析一下项目是不是真的可行，再动手不迟
+  - 当你有了一个可行的计划，有了真正的 Dead Line，你的项目交付就有了基本的保障
+  - 产品能力的锻炼不是一朝一夕就能炼成的，但日常多模仿，多实践，还是能做出来不错的产品设计
+  - 要运营一款产品，你需要想清楚以下几个问题
+    - 想清楚你的产品能给用户带来什么样的价值？帮助用户解决什么问题？
+    - 商业模式是什么？也就是用户是不是会为你的产品付钱？或者你的产品通过什么方式赚钱？
+    - 如何让用户知道你的产品？如何让用户知道你产品所能带来的价值？
+  - 推广网站：https://www.producthunt.com/
