[GeekTime] Some big failure projects

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -706,3 +706,33 @@
     - 商业模式是什么？也就是用户是不是会为你的产品付钱？或者你的产品通过什么方式赚钱？
     - 如何让用户知道你的产品？如何让用户知道你产品所能带来的价值？
   - 推广网站：https://www.producthunt.com/
+
+## 反面案例
+
+- 从外部环境、技术管理、项目管理和组织文化这四个方面来分析
+- 案例 1. 来自地狱的项目
+  - 外部环境：法国政府官员腐败，对于项目进度并没有施加压力
+  - 技术管理：没有好的开发实践，完全 C++ 开发，600 万行代码，版本控制一团糟
+  - 项目管理：糟糕的项目管理，团队成员 55 人，35 名经理，20 名开发人员，管理人员比开发人员还多；不断开会，只是展示 PPT
+  - 组织文化：禁止超过 9 点打卡，禁止喝咖啡等奇葩要求
+- 案例 2. 美国联邦调查局虚拟案件文档系统
+  - 外部环境：FBI 没有真正懂技术的负责人领导和管控项目，对承包商缺少控制
+  - 技术管理：无法解决项目的复杂性，系统在设计上不完整，不充分，不到位，以至于在现实场景中完全无法使用，上线前没有测试
+  - 项目管理：开发方和客户之间沟通不畅；频繁需求变更，项目管理混乱，外行领导内行
+  - 组织文化：指出问题的雇员反而被调查和开除
+- 案例 3. 微软 Vista 项目
+  - 外部环境：在目标的设定上，主要不是为了满足用户需求，而是为了商业上的竞争需要
+  - 技术管理：技术上难度过大，超出团队控制范围，无法完成任务
+  - 项目管理：比尔盖茨对项目直接干预较多，项目周期太长
+  - 组织文化：盖茨制定目标后，核心团队明知困难，却不敢也没有反对，当看到任务无法完成时，他们不再努力工作，只想着如何推卸责任
+- 常见的失败原因：
+  - 不切实际或者不明确的项目目标
+  - 对项目所需要的资源估算不准确
+  - 需求不明确或者频繁变更
+  - 没有对风险进行有效管理
+  - 和客户之间沟通不畅
+  - 无法解决项目的复杂性
+  - 没有好的开发实践
+  - 糟糕的项目管理
+  - 上层的政治斗争
+  - 商业压力
