[GeekTime] VS code development example

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -736,3 +736,30 @@
   - 糟糕的项目管理
   - 上层的政治斗争
   - 商业压力
+
+## VS code 案例
+
+- 软件工程的核心，就是围绕软件项目开发，对开发过程的组织，对方法的运用，对工具的使用
+- VS Code 使用的是快速迭代的开发模式，每四周一个迭代：
+  - 第一周：偿还技术债务，修复上个版本的 Bug，制定下一个版本的计划
+  - 第二、三周：按照计划开发和修复 Bug
+  - 第四周：测试开发完成的版本
+  - 下一迭代第一周：发布新版本
+- 从角色上来说，除了开发，还有主要有两种角色：Inbox Tracker 和 Endgame Master
+  - Inbox Tracker：
+    - 主要任务就是收集、验证、跟踪 Bug
+    - VS Code 团队写了一个机器人叫 VSCodeBot，可以帮助对 Issue 先自动处理，打标签或回复，然后 Inbox Tracker 再对剩下的 Issue 进行人工处理
+  - Endgame Master
+    - 组织管理整个迭代的测试和发布工作
+    - 每个迭代测试之前，根据迭代的开发计划制定相应的测试计划，生成 Check List，确保每一个新的功能都有在 Check List 中列出来
+    - 最后整个测试计划会作为一条 GitHub Issue 发出来给大家审查
+- 各个阶段
+  - 需求收集和版本计划
+    - 通过 Github Issue 来进行管理
+  - 设计和开发
+    - GitHub Flow 和 Azure DevOps
+  - 测试
+    - 在人工测试结束后，Endgame Master 就需要跑冒烟测试，确保这个迭代的改动不会导致严重的 Bug 发生
+  - 发布流程：
+    - 通过创建 Release 分支可以保障有一个稳定的、可以具备发布条件的代码分支
+    - 通过预发布内部试用的机制，有问题可以及时发现，避免造成严重的影响
