[GeekTime] Software engineer in big company

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -763,3 +763,18 @@
   - 发布流程：
     - 通过创建 Release 分支可以保障有一个稳定的、可以具备发布条件的代码分支
     - 通过预发布内部试用的机制，有问题可以及时发现，避免造成严重的影响
+
+## 大厂是怎样应用软件工程的
+
+- 软件项目开发团队组成
+  - 软件开发团队规模小
+  - 没有专职测试
+  - DevOps 文化
+- 开发工具的使用
+  - https://github.com/jhuangtw/xg2xg
+- 项目开发流程
+  - 迭代周期短
+  - 严格的开发流程
+  - 严谨的测试流程
+  - 完善的发布和监控流程
+  - 事后总结，不断改进
