[GeekTime] How to deal with new technologies

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -778,3 +778,15 @@
   - 严谨的测试流程
   - 完善的发布和监控流程
   - 事后总结，不断改进
+
+## 新技术
+
+- 工程思维，本质上是一种思考问题的方式，在解决日常遇到的问题时，尝试从一个项目的角度去看待问题、尝试用工程方法去解决问题、站在一个整体而不是局部的角度去看问题
+- 康威定律（Conway's Law）：
+  ![](/assets/geektime/conways_law.png)
+
+  - 微服务架构的设计，不仅仅是一个对服务拆分的架构设计，同时也是对组织架构拆分的设计
+
+- 当你在设计系统架构的同时，把组织架构的设计也考虑进去，很多问题也就迎刃而解了
+- 如果你从软件工程的角度去看云计算，它本质上是在将那些与业务无关的，而又很重要的基础设施、技术，作为一种标准服务提供
+- 技术服务于架构设计，架构设计服务于业务，业务服务于商业
