[GeekTime] Conclusion of software engineering

--- a/geektime/软件工程之美.md
+++ b/geektime/软件工程之美.md
@@ -790,3 +790,16 @@
 - 当你在设计系统架构的同时，把组织架构的设计也考虑进去，很多问题也就迎刃而解了
 - 如果你从软件工程的角度去看云计算，它本质上是在将那些与业务无关的，而又很重要的基础设施、技术，作为一种标准服务提供
 - 技术服务于架构设计，架构设计服务于业务，业务服务于商业
+
+# 总结
+
+- 我学习软件工程最大的收获，就是在看问题的时候，不再局限于从技术层面或者是一个局部去思考问题，而是站在整体，用软件工程的方法去指导自己的思考和决策
+- 万事皆项目
+  - 项目都是从一个想法开始的
+  - 项目开始之前不要忘记可行性研究
+  - 项目未动，计划先行
+  - 在具体实现一个项目之前，先进行分析和设计
+  - 从瀑布模型到敏捷开发，从集中交付到持续交付
+  - 测试和线上维护也很重要
+  - 项目完成后，不忘总结复盘
+- 在学习软件工程时，尝试把学到的知识写下来，去教给其他人，这样你的收获也会是最大的
