[ASJ] Study and reading

--- a/暗时间.md
+++ b/暗时间.md
@@ -11,3 +11,97 @@
     - 样本大小很关键
     - 警惕 “沉默的证据”、事后偏见、自利归因
 - 如果你想真正得到一些知识，最好过滤一下你的信息，否则你只是在别人的思考中得意着
+
+例子：
+- 非洲鱼：一种鱼干不过鱼 B，当它看到鱼 B 干不过鱼 C，自己就会躲着鱼 C 远远的
+
+## 学习密度与专注力
+
+- 培养专注力的习惯
+  - 做自己喜欢做的事
+  - 享受困难
+  - 不主动关注哪些自己觉得没有价值的事
+
+## 学习习惯
+
+### 学习与思考
+
+- Google&Wiki
+- 看书挑剔，只看经典
+- 做读书笔记
+  - 将自己阅读时候的思考（包括闪念）总结下来
+  - 将书中的好例子摘抄下来
+  - 很多时候，仅仅是用自己的语言重新表述一下就能极大地加深印象和理解
+- 放一个问题在脑子里，利用闲暇以及睡觉的时间去思考
+  - 将思考变成习惯可以避免焦虑——投入地做另一件事可以避免自己对某件事情的焦虑
+- 多看心理学与思维的书，因为它们是跨学科的
+- 学习一项知识，必须问自己三个重要的问题：
+  1. 它的本质是什么
+  2. 它的第一原则是什么
+  3. 它的知识结构是怎样的
+- 学习和思考的过程中常问自己的几个问题
+  1. 你的问题到底是什么？——提醒自己思考不要偏离问题
+  2. OK，到现在为止，我到底有什么收获？——提醒自己时不时总结，整理学过的东西
+  3. 设想自己正在将东西讲给别人听——能否讲出来是判断是否真正理解的最佳方法
+  4. 设想需要讲给一个不懂的人听——迫使自己去挖掘知识背后最本质、往往也是最简单的解释
+  5. 时常反省和注意自己的思维过程，尤其是当遇到无法理解或解决的问题后，将思维的大致脉络写下来是一个很好的习惯
+  6. 养成反驳自己想法的习惯
+  7. 人的思维天生就是极易流于表面来理解事物的。觉得自己理解了一个问题吗？条件反射性地问自己：
+    - 你真的理解吗？
+    - 你真的理解了问题的本质了？
+    - 问题的本质到底是什么？
+    - 目前我的理解是什么？
+    - 这样的理解到底有什么建设性？
+    - 。。。
+
+### 时间和效率
+
+- 趁着对一件事情有热情的时候，一股脑把万事开头那个最难的阶段熬过去
+- 重要的事优先
+- 重要的事情要营造比较大的时间块来完成
+- 同时也要善于利用小块时间
+- 重视知识的本质
+- 重视提前积累的强大力量
+- 抬起头来
+- 有时间吗？总结总结最近得到的新知识
+- 有时间吗？看本书吧
+- 制定简要的阅读计划
+
+#### 读书
+
+- 根据主题来查阅资料，而不是根据资料来查阅主题
+- 好资料的特点：
+  - 从问题出发
+  - 重点介绍方法背后的理念，注重直观解释，而不是方法的技术细节
+  - 按照方法被发明的时间流程来介绍（当前方法是如何通过之前的方法一步步的改进得到的）
+- 学习一个东西之前，首先在大脑中积累充分的 “疑惑感”
+  - 你对问题的疑惑越大，在之前思考的越多，当看到解答后印象就会越深刻
+- 有选择地阅读
+  - 选择一本书中感兴趣的章节优先阅读
+  - 对一本书中技术性较弱或信息密度较低的部分快速地略读
+- 在阅读的时候可以用下面三个问题切分内容：
+  1. 问题是什么？
+  2. 方案是什么？
+  3. 例子是什么？
+- 或者是解释现象的：
+  1. 现象是什么？
+  2. 解释是什么？
+  3. 支撑这个解释的理由是什么？
+  4. 例子是什么？
+- 阅读的分类：
+  - 知识类
+  - 思维类
+- 利用时间碎片：任何一点时间都可以用于阅读
+- 看不懂一个知识的原因：
+  - 看得不够使劲
+  - 其中涉及到了你不懂的概念
+  - 作者讲述的顺序不对
+- 如何在阅读之前就能获得对一本书质量的大致评估
+  - 看作者
+  - 看目录和简介
+  - 看评价
+  - 看样章
+- 如何搜寻到好书
+  - 同作者的著作
+  - 一本好的著作在参考资料里面重点提到的其他著作
+  - 对于一个主题，搜索到好心人总结的参考资源导引
