[ASJ] Knowledge structure

--- a/暗时间.md
+++ b/暗时间.md
@@ -105,3 +105,13 @@
   - 同作者的著作
   - 一本好的著作在参考资料里面重点提到的其他著作
   - 对于一个主题，搜索到好心人总结的参考资源导引
+
+### 知识结构
+
+- 抓住不变量
+  - （不变量）本质知识：深入掌握牢靠
+  - 非本质知识：待用到的时刻 RTM（Read The Manual）
+- 学会在纷繁的知识中抽象出那些重要的、本质的、不变的东西
+- 本质的知识：
+  - 分析问题和解决问题的思维方法
+  - 判断与决策的方法
