[ASJ] Thinking change the life

--- a/暗时间.md
+++ b/暗时间.md
@@ -118,4 +118,10 @@
 
 ## 思维改变生活
 
+- 用数学的语言来说，自然选择过程试图最优化的目标函数并不是 “幸福感”，而是 “繁衍概率”
+- 没有得到好的结果并不代表你的过程就错了，结果正确也不代表方法就一定正确
+  - 看重过程而非单次的结果，再好的过程也可能会偶尔失利，但从长远来统计，好的过程总体上必然导致更好的结果
+- 普通人从自己的错误中学习，聪明人从别人的错误中学习
+- 尽量去让我们大脑中假想的角色去经历虚拟的失败，从而避免在现实中去碰一鼻子灰
+  - 我们在大脑中走的越远，在现实中就走的越稳，在大脑中失败的次数越多，在现实中失败的次数就越少
 
