--- a/暗时间.md
+++ b/暗时间.md
@@ -125,3 +125,6 @@
 - 尽量去让我们大脑中假想的角色去经历虚拟的失败，从而避免在现实中去碰一鼻子灰
   - 我们在大脑中走的越远，在现实中就走的越稳，在大脑中失败的次数越多，在现实中失败的次数就越少
 
+- 我们的大脑从外界接受到的信息其实是满含着歧义的，然而我们的大脑几乎每次都能够从富含歧义的信息中找出最靠谱的解释
+  - 这得益于漫长的进化过程，以及我们平常生活中积累的大量先验假设
+  - 这些先验假设是双刃剑
