[ASJ] The suggestion for open mind

--- a/暗时间.md
+++ b/暗时间.md
@@ -129,3 +129,7 @@
   - 这得益于漫长的进化过程，以及我们平常生活中积累的大量先验假设
   - 这些先验假设是双刃剑
 
+- 打破偏见的唯一途径就是开阔视野，多积累知识，以及和具有不同知识背景的人讨论，否则就算是抱着 “我可能是错的” 这种信念，你也不知道怎么去证伪自己的一个猜测
+- 时常使用以下两句话来提醒自己保持 Open Mind：
+  - 这只是一种可能，未必是唯一的可能
+  - 想不出其他解释不代表就不存在其他解释
