[ASJ] The evolution of human being

--- a/暗时间.md
+++ b/暗时间.md
@@ -133,3 +133,9 @@
 - 时常使用以下两句话来提醒自己保持 Open Mind：
   - 这只是一种可能，未必是唯一的可能
   - 想不出其他解释不代表就不存在其他解释
+
+- 事实上，我们所谓的生活的意义来源于情感系统（情绪脑）
+- 很多时候我们只是生活在信息社会的远古人
+  - 分不清什么是虚拟什么是真实
+
+- 通过提供不断的进展，让执行者意识到事情正在朝向完成不断迈进，这种正面趋势所带来的积极情感能够进一步激励个体把事情执行到底（例子：将手放在冰水中。。。）
