[ASJ] emotion andd intellect

--- a/暗时间.md
+++ b/暗时间.md
@@ -139,3 +139,14 @@
   - 分不清什么是虚拟什么是真实
 
 - 通过提供不断的进展，让执行者意识到事情正在朝向完成不断迈进，这种正面趋势所带来的积极情感能够进一步激励个体把事情执行到底（例子：将手放在冰水中。。。）
+
+- 我们的理性大脑非常善于对自己的行为作出立即的、看上去合理的解释
+- 我们知道答案，却往往不知道求解的真正思维过程
+  - 我们的意识就像是一个等着老师给出答案的小学生，只能眼巴巴地在那等着，至于老师是怎么想出答案的，老师不告诉你
+  - 只要我们的情绪大脑首先认定了一件事情，我们那点可怜的理性思维便很容易屈从于情绪大脑发下的命令——把事情往利于自己的方向解释
+  - 只要一种解释是对自己有利的，我们便不想去推敲和反驳，再漏洞百出的事情看上去也不无可能，而且只要一种解释是有可能的，我们就认定其一定是的
+  - 而对自己不利的解释，我们或者忽略，或者则会异常仔细地去推敲，抓住一个细小漏洞则相信已完全推翻了该解释（尤其是当为一件事付出了金钱、社会关系，很多很多之后）
+  - 我们每个人大脑中都有思想钢印。这道钢印由经验打造，用自尊来维护，牢不可破，比钻石的硬度还高
+
+- 客观意味着承认存在未知信息的可能性，理性意味着能够从对立面的视角去看问题和思考
+- 学会质疑自己的判断，假设自己是站在对立面的立场上帮他说话，往往能够发现很多意料之外的东西；即便别人是错的，尝试着理解别人为什么错
