[ASJ] Used to do sth

--- a/暗时间.md
+++ b/暗时间.md
@@ -150,3 +150,9 @@
 
 - 客观意味着承认存在未知信息的可能性，理性意味着能够从对立面的视角去看问题和思考
 - 学会质疑自己的判断，假设自己是站在对立面的立场上帮他说话，往往能够发现很多意料之外的东西；即便别人是错的，尝试着理解别人为什么错
+- 与其让别人指出自己的错误，不如自己试着去发现自己的错误
+
+- **习惯之所以难以改变，就是因为习惯是自我巩固的 —— 越用越强，越强越用**
+  - 如果你总是情绪用事，不假思索，那么这种思维习惯便会越来越强大
+  - 如果你总是理性思考，反省自己的判断，能换立场去看问题，那么这样的思维习惯逐渐也会越来越强大
+
