[ASJ] Writing is for thinking

--- a/暗时间.md
+++ b/暗时间.md
@@ -156,3 +156,10 @@
   - 如果你总是情绪用事，不假思索，那么这种思维习惯便会越来越强大
   - 如果你总是理性思考，反省自己的判断，能换立场去看问题，那么这样的思维习惯逐渐也会越来越强大
 
+### 书写是为了更好的思考
+
+- 书写是对思维的备忘
+- 书写是对思维的缓存（工作记忆有限，仅靠大脑思维总是走不远）
+- 书写是与自己的对话（如果不用纸笔，仅用大脑，很难在思考一个问题的同时对自己的思考进行反思）
+- 书写是与别人的交流（如果你不知道一个东西，很大的可能性你也不知道你自己不知道它）
+- 有时候，语言自己也会思考
