[ASJ] The benefits of writing blogs

--- a/暗时间.md
+++ b/暗时间.md
@@ -163,3 +163,13 @@
 - 书写是与自己的对话（如果不用纸笔，仅用大脑，很难在思考一个问题的同时对自己的思考进行反思）
 - 书写是与别人的交流（如果你不知道一个东西，很大的可能性你也不知道你自己不知道它）
 - 有时候，语言自己也会思考
+
+### 写博客的好处
+
+- 能够交到很多志同道合的朋友
+- 书写是为了更好地思考
+- “教” 是最好的 “学”（如果一件事情你不能讲清楚，十有八九你还没有完全理解）
+- 讨论是绝佳的反思
+- 激励你去持续学习和思考
+- 学会持之以恒地做一件事情
+- 一个长期的价值博客是一份很好的简历
