[ASJ] I can't & I unable to

--- a/暗时间.md
+++ b/暗时间.md
@@ -173,3 +173,10 @@
 - 激励你去持续学习和思考
 - 学会持之以恒地做一件事情
 - 一个长期的价值博客是一份很好的简历
+
+### 我不想与我不能
+
+- **自利归因**：把一件事情的发生的原因归结为对自己有利的那种情况
+- 我们的努力是为了增大结果发生的几率，而不是为了那个确定的结果
+- 别给自己找理由，因为那等同于说 “我不能___，我没有___”，等于否定自己的主观能动性
+- 凡事多往自身归因，你才能披荆斩棘
