[ASJ] Why need to do things by ourselves

--- a/暗时间.md
+++ b/暗时间.md
@@ -180,3 +180,11 @@
 - 我们的努力是为了增大结果发生的几率，而不是为了那个确定的结果
 - 别给自己找理由，因为那等同于说 “我不能___，我没有___”，等于否定自己的主观能动性
 - 凡事多往自身归因，你才能披荆斩棘
+
+### 遇到问题为什么要自己动手
+
+- 相比于体力活，对学习新知识的困难程度的评估，我们却很不在行，因为大部分知识都是需要等你掌握了之后才会 “豁然开朗”、“柳暗花明” 的
+- **“Unknown Unknown”**：如果你不知道一个东西，你也不会知道自己不知道它（新知识的特性，感觉到困难的根本原因）
+- **寻找捷径只是小聪明**：我们计算收益的时候仅仅考虑是否解决了手头的问题，而解决的过程中其实还会获得许多其他的收益
+- 生活或工作中，很大程度上你遇到的每个问题都不是孤立的，既然你遇到了某问题，那么很大可能性你以后还会遇到类似的问题
+- **困难的路越走越容易，容易的路越走越困难**
