[ASJ] Core abilities

--- a/暗时间.md
+++ b/暗时间.md
@@ -188,3 +188,12 @@
 - **寻找捷径只是小聪明**：我们计算收益的时候仅仅考虑是否解决了手头的问题，而解决的过程中其实还会获得许多其他的收益
 - 生活或工作中，很大程度上你遇到的每个问题都不是孤立的，既然你遇到了某问题，那么很大可能性你以后还会遇到类似的问题
 - **困难的路越走越容易，容易的路越走越困难**
+
+### 什么才是你的不可替代性和核心竞争力
+
+- 个人的核心竞争力是他独特的个性知识经验组合，如果这种组合具备以下 3 点，那么你就具备核心竞争力
+  1. 绝无仅有
+  2. 在实践中有价值
+  3. 具有可持续发展性
+
+- **应当最大限度地加强和发挥自己独特的组合，而不是寻求单项的超越**
