[ASJ] Core abilities

--- a/暗时间.md
+++ b/暗时间.md
@@ -197,3 +197,9 @@
   3. 具有可持续发展性
 
 - **应当最大限度地加强和发挥自己独特的组合，而不是寻求单项的超越**
+
+- 以下知识技能组合是具有相当程度的不可替代性：
+  1. 专业领域技能
+  2. 跨领域的技能（解决问题的能力、创新思维、判断与决策的能力、批判性思维、表达沟通能力）
+  3. 学习能力（持续学习和思考新知识）
+  4. 性格要素（专注、持之以恒、自省、好奇心、自信、谦卑）
