[ASJ] How to solve problem

--- a/暗时间.md
+++ b/暗时间.md
@@ -206,4 +206,6 @@
 
 ## 跟波利亚学解题
 
-
+- 人类整个认知系统中有大量功能从本质上都是硬编码（因而才有人人都概莫能外的各种认知偏见）
+- 越是高等的动物，大脑中用于处理特定问题的硬编码神经元回路就越是多和复杂
+- 所有的启发式思维方法（heuristics）实质上都是为了联想服务的，而联想则是为了从我们的大脑的知识系统中提取出有价值的性质或定理，从而补上从条件到结论、从已知到未知之间缺失的链环
