--- a/暗时间.md
+++ b/暗时间.md
@@ -209,3 +209,25 @@
 - 人类整个认知系统中有大量功能从本质上都是硬编码（因而才有人人都概莫能外的各种认知偏见）
 - 越是高等的动物，大脑中用于处理特定问题的硬编码神经元回路就越是多和复杂
 - 所有的启发式思维方法（heuristics）实质上都是为了联想服务的，而联想则是为了从我们的大脑的知识系统中提取出有价值的性质或定理，从而补上从条件到结论、从已知到未知之间缺失的链环
+
+- Working Backwards（倒过来解）:
+  - 首先我们把需要求解的问题本身当成条件，从它推导出结论，再从这个结论推导出更多的结论，直到某一个点上我们发现已经出现了真正已知的条件。这个过程称为分析。有了这条路径，我们便可以从已知条件出发，一路推导到问题的解
+- 欧拉认为如果不能把解决数学问题背后的思维过程交给学生的话，数学教学就是没有意义的
+- **启发式思考方法**：
+  - 时刻不忘未知量（时刻别忘记你到底想要求什么，问题是什么）
+  - 用特例启发思考（一个泛化的问题往往有一种 “不确定性”，这种不确定性会成为思维的障碍）
+  - 反过来推导（反向解题隐含了解题中至为深刻的思想：**归约**）
+    - 倒推法之所以是一种极为深刻的思维方法，本质上是因为它充分利用了题目中一个最不易被觉察到的信息 —— 结论。
+    - 结论往往蕴含着丰富的条件，譬如对什么样的解才是满足题意的解的约束。一般来说，借助结论中蕴含的知识，我们便可以更为 “智能地” 搜索解空间
+    - 笛卡尔的万能解题法：将问题转化为代数问题，然后设未知数，解方程组，这本质上就是一种倒推：假想结论 `x`，将题目对 `x` 的需求表达出来，然后顺势而下推导出 `x`
+  - 试错
+  - 调整题目的条件（如，删除、增加、改变条件）
+    - 通过调整题目条件，我们能够发现条件和结论之间是如何联系的
+  - 求解一个类似的题目
+    - 为了便于脑中的知识结构真正能够 “迁移”，在记忆掌握和分析问题的时候都应该尽量抽象地去看待，这样才能够建立知识的本质联系，才能够最大化联想空间
+  - 列出所有可能跟问题有关的定理或性质
+  - 考察反面，考察所有情况（避免陷入特定的解题手法）
+  - 将问题泛化，并求解这个泛化后的问题
+  - **意识孵化法**（我们先把问题吃透，放在脑子里，等着我们的下意识把它解出来）
+  - 烫手山芋法（把问题扔给别人解决，网络赋予了这个方法优越性）
+- 充分挖掘题目中蕴含的知识，是解题的最关键步骤，本质上，所有的启发式方法某种意义上都是为此服务的，譬如，联想、演绎和归纳
