[ASJ] Thinking and practice

--- a/暗时间.md
+++ b/暗时间.md
@@ -231,3 +231,39 @@
   - **意识孵化法**（我们先把问题吃透，放在脑子里，等着我们的下意识把它解出来）
   - 烫手山芋法（把问题扔给别人解决，网络赋予了这个方法优越性）
 - 充分挖掘题目中蕴含的知识，是解题的最关键步骤，本质上，所有的启发式方法某种意义上都是为此服务的，譬如，联想、演绎和归纳
+
+- 事实上，不需要借助于认知科学，单单是通过对我们自己的思维过程的自我观察，也许就已经能够总结出一些重要的规律了，也许，对思维过程的反观真的是人有别于其他动物的本质区别
+- 知识是一把双刃剑，一方面，它们提供给了我们解决问题无以伦比的捷径优势，“砖头是砌墙的”，于是我们遇到砌墙这个问题就可以迅速利用砖头。然而另一方面，知识却也是思维的桎梏
+  - 思维定势就是指下意识遵循既有知识框架思考的过程
+  - 如何在获取知识优势的同时，防止被知识束缚住，是一门技术。掌握这门技术的钥匙，就是 **抽象**
+  - 再吸收知识的时候进行抽象，同时在面对需要用到知识的新问题时也要对问题进行抽象
+- 抽象是对非本质细节去枝减叶的过程，是我们在掌握知识和解决问题时候的一把有力的奥卡姆剃刀
+  - 无论是在解题还是在学习的过程中，问自己一个问题 **“我是不是已经掌握了这个知识最深刻最本质的东西”**
+
+- 好题目，即测试一个人思维的习惯的题目，有以下一些性质：
+  - 不需要用到未知的知识
+  - 需要用到未知的知识，但一个敏锐的解题者可以通过对题目的分析自行发现这些所需的知识
+  - 考察解题的一般性思路，而不是特定（ad hoc）的解题技巧
+  - 考察思维能力。联想能力、类比能力、抽象能力、演绎能力、归纳能力、观察能力、发散能力（思维不落巢臼的能力）
+  - 考察一般性思维方法。
+    - 通过特例启发思考
+    - 通过试错寻找规律
+    - 通过泛化试探更一般性命题
+    - 通过倒过来推导将问题进行归约
+    - 通过调整（分解、删除、增加，等等）题目条件来感知它们之间的联系以及和结论的联系
+    - 通过系统化的分类讨论来覆盖每种可能性
+  - 好题目例举：
+    - 烙饼排序问题
+    - Nim 问题
+    - 9 公升 4 公升水桶倒 6 公升水的问题
+    - 9 点连线问题
+    - 6 根火柴搭出 4 个面的问题
+    - “木板” 问题
+    - 许多数论问题
+
+- 在思考一个问题的时候，最容易犯的一类错误是忘了考虑某种可能性，不管这种可能性是另一种做法
+  - 一个有效的办法就是将自己的思考过程清晰地写在纸上
+- 练习并不产生新能力，然而练习会将平时需要用脑子去想（参与）的东西转化为内在的习惯
+- **解题练习的最重要目的不是将特定的题目解出来，而是在于反思解题过程中的一般性、跨问题的思维法则**
+  - 简单地将题目解出来，或者解不出来直接看答案只能算是理解，而理解和应用还差十万八千里，要运用的话需要自己去想出那关键的一步
+  - 需要去揣测和总结别人的思维是如何触及那关键的一步，而你自己的思维又为什么触及不到它，有没有一般性的原则可以指导你下次也能想到那个 “关键的一步”？
