[ASJ] Hammer and nail

--- a/暗时间.md
+++ b/暗时间.md
@@ -267,3 +267,14 @@
 - **解题练习的最重要目的不是将特定的题目解出来，而是在于反思解题过程中的一般性、跨问题的思维法则**
   - 简单地将题目解出来，或者解不出来直接看答案只能算是理解，而理解和应用还差十万八千里，要运用的话需要自己去想出那关键的一步
   - 需要去揣测和总结别人的思维是如何触及那关键的一步，而你自己的思维又为什么触及不到它，有没有一般性的原则可以指导你下次也能想到那个 “关键的一步”？
+
+### 锤子和钉子
+
+- 心中有锤，就容易为其奴役，始终莫要忘记提醒自己 —— **“问题是什么？”**
+- 正确的态度是 —— **手中有锤，心中无锤**
+- Why 永远在 How 之前
+
+- 对应的一句话：如果你想钉一个钉子，所有东西看上去都像是锤子
+  - **如果你心中专注于你想要解决的问题，那么你所看到的东西就会呈现出以往你没有看到的一面**
+
+- 把自己变成钉子，这就是 Eureka 的奥秘
