--- a/暗时间.md
+++ b/暗时间.md
@@ -278,3 +278,16 @@
   - **如果你心中专注于你想要解决的问题，那么你所看到的东西就会呈现出以往你没有看到的一面**
 
 - 把自己变成钉子，这就是 Eureka 的奥秘
+
+### 鱼是最后一个看到水的
+
+- 人倾向于在既有框架下去解决问题；更重要的是，在这个过程中很难觉察到框架约束的存在
+- 在这一切背后的本质原因是：**人是有很强的适应性的**
+- 普通人遵守规则，牛人无视规则，伟人创造规则
+- 在既有框架下解决问题很多人都会，难就难在意识到框架的存在并突破它
+- 把简单的事情搞复杂的人比比皆是，把复杂的事情的人凤毛麟角
+- 编程语言之争的原因之一就是人们容易在自己熟悉的语言框架下思考，并形成严重的偏见，只看到自己语言的好处，甚至于将并非好处的地方也觉知为好处
+- 避免思维被一门语言束缚的最好办法就是 “学习其他语言”
+- 学习编程重在学习基本的概念和素养，这些是长期稳定不变的东西，投入精力学习细节，学得越细，就越是容易淘汰
+  - 一旦掌握了基本的概念，要用到细节的时候，细节自然会各就各位
+- 脱离语言思考，使用语言实现
