[ASJ] Know the whole process

--- a/暗时间.md
+++ b/暗时间.md
@@ -291,3 +291,37 @@
 - 学习编程重在学习基本的概念和素养，这些是长期稳定不变的东西，投入精力学习细节，学得越细，就越是容易淘汰
   - 一旦掌握了基本的概念，要用到细节的时候，细节自然会各就各位
 - 脱离语言思考，使用语言实现
+
+### 知其所以然
+
+- 目前几乎所有的算法书的讲解方式都是欧几里得式的、瀑布式的、自上而下的，这完全把人类大脑创造发明的步骤给反过来了
+- 我们要的不是相对论，而是诞生相对论的那个大脑。我们要的不是金蛋，而是下金蛋的那只鸡
+- 我们在思考一个问题的过程中有两种思维形式：
+  - **联想**：
+    - 这个过程是试探性的
+    - 联想本身需要记忆提取的线索，所以受到记忆提取线索的制约，如果线索不足，那怎么也联想不起来
+  - **演绎 & 归纳**：
+    - 对问题的各个条件进行演绎的推理过程
+    - 通过对一些特殊形式的观察来进行归纳，试图总结问题中的规律
+- 如果说问题求解是一部侦探小说，那么算法只是结局而已，而思考过程才是情节
+
+- 讲述思维过程而非结果有几个极其重要的价值：
+  1. 内隐化
+    - 思维法则其实也是知识；是内隐的知识（元知识）
+    - 要将思维方法内隐化，需要不断练习，就像需要不断练习才可在无意识状态下就能骑自行车一样
+  2. 跨情景运用
+    - 你学会了在解决数学问题的时候 “注意未知数” 却不一定能在解决现实生活中的问题中时刻都能 “注意你的未知数”（解决数学问题和解决生活中问题的场景不一样，不同的环境线索，在你大脑中激发的记忆也不一样）
+  3. 对问题解的更多记忆提取线索
+    - 比如知道算法是怎样一步步被推导出来的，我们就一下拥有了大量的记忆提取线索：对算法发现过程中的任何一个关键步骤（尤其是本质）的回忆都可能使我们能够自己动手推导出剩余的内容
+  4. 包含了多得多的知识
+    - 一个问题背后的思想，有助于解决一类问题
+    - 算法诞生过程中的思路往往包含了比实际算法更本质得多的知识
+  5. 重在分析推理，而不是联想
+    - 重在思维的传授可以让人养成从问题本质入手，逐步分析推理的习惯，而不是直接生搬硬套
+    - 很多时候我们并不知道问题的本质是什么，就需要靠联想、类比来领路探索
+  
+- 从一个算法中领悟尽量深刻的东西，则需要做到三件事情：
+  1. 寻找该算法的原始出处
+  2. 原始的出处其实也未必就都推心置腹地和你讲得那么到位
+    - 算法设计出来了之后人们几乎是不会去回顾整个思维过程的细节，只把直指目标的那些东西写出来
+  3. 不仅学习别人的思路，整理自己的思路也是极其重要的
