[ASJ] Why we need to know the whole process

--- a/暗时间.md
+++ b/暗时间.md
@@ -325,3 +325,24 @@
   2. 原始的出处其实也未必就都推心置腹地和你讲得那么到位
     - 算法设计出来了之后人们几乎是不会去回顾整个思维过程的细节，只把直指目标的那些东西写出来
   3. 不仅学习别人的思路，整理自己的思路也是极其重要的
+
+- 写论文应该写得像侦探小说一样
+
+### 为什么有必要知其所以然
+
+- 没有明白背后的证明之前，任何一个定理对你来说都是等价的 —— 等价于背乘法口诀
+- 去理解一个定理的证明会带来巨大的好处，第一个好处就是你很难再忘掉它：
+  - 在没有理解一个定理的证明之前，定理对你而言是一堆没有内在联系的词句
+  - 在理解了一个定理的证明之后，定理就归约为证明它所需要的条件加上逻辑，逻辑本来就存在于你的大脑里
+  - 需要你去记忆的也只有一个或两个关键的 insights
+- **这是一个树状的知识结构，越往上层走，需要记忆的节点就越少**
+- 所谓触类旁通者，其实便是因为他擅长去理解解法背后的更具一般性的东西
+- 一个好习惯，看到美妙的证明和解法总是会去一遍又一遍地反复揣摩，试图理解想出这个证明的人到底是怎么想出来的，有没有什么一般性的方法可循（在这样的揣摩中你会理解更深刻的东西，让你有举一反三的能力）
+- 与看定理必看证明类似，看一个问题的解法，必然要看解法所诞生的过程，背后是否隐藏着更具一般性的解决问题的思路和原则
+- 对于每个问题都能真正弄清以下这几个问题的答案，那么可以肯定的是，你的理解、记忆，以及学习的效率都会得到质的提高：
+  - **为什么这种解法是对的？**
+  - **为什么那种解法是错的？**
+  - **为什么这种解法不是最优的？**
+  - **证明为什么没有更优的解法**
+- **知道怎么做是从正确（高效）解法得到的，而知道为什么必须得那样做则往往是从错误（低效）的解法当中得到的**
+  - 只有在理解了错误的做法为什么错误之后，我们才能深刻地体会到为什么正确的解法是如此正确
