[ASJ] New topic

--- a/暗时间.md
+++ b/暗时间.md
@@ -346,3 +346,9 @@
   - **证明为什么没有更优的解法**
 - **知道怎么做是从正确（高效）解法得到的，而知道为什么必须得那样做则往往是从错误（低效）的解法当中得到的**
   - 只有在理解了错误的做法为什么错误之后，我们才能深刻地体会到为什么正确的解法是如此正确
+
+### 康托尔、哥德尔、图灵
+
+#### 图灵的停机问题（The Halting Problem）
+
+- 停机问题：不存在这样一个程序（算法），它能够计算任何程序（算法）在给定输入上是否会结束（停机）
