[ASJ] The Halting Problem

--- a/暗时间.md
+++ b/暗时间.md
@@ -352,3 +352,35 @@
 #### 图灵的停机问题（The Halting Problem）
 
 - 停机问题：不存在这样一个程序（算法），它能够计算任何程序（算法）在给定输入上是否会结束（停机）
+- 反证：
+
+- 假设存在这样的一个程序 `God_algo`
+
+```c
+bool God_algo(char* program, char* input) {
+  if (<program> halts on <input>)
+    return true;
+  return false;
+}
+```
+
+- 由上述算法可以导出一个新的算法：
+
+```c
+bool Satan_algo(char* program) {
+  if (God_algo(program, program)) {
+    while (1);
+    return false;
+  }
+  return true;
+}
+```
+
+- 当我们把这个算法运用到它自身时 `Satan_algo(Satan_algo);`
+  - 如果 `Satan_algo` 能够结束，那么 if 判断成立，即 `God_algo(Satan_algo, Santa_algo)` 返回 `true`，但是最终进入了无穷训话
+  - 如果 `Satan_algo` 不能够结束，那么 if 判断失败，但是 `Satan_algo(Satan_algo);` 却返回了 `true`
+  - 正如拉普拉斯所说：“陛下，我们不需要（上帝）这个假设”
+
+#### Y Combinator
+
+
